--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,24 @@ body {
 }
 
 h1 {
-  color: #fff;
+  color: #232527;
+  background-color: white;
+  padding: 10px;
+  height: 50px;
+  position: relative;
+  border-radius: 10px;
+}
+
+h1:before {
+  content: "";
+  position: absolute;
+  right: 100%;
+  top: 26px;
+  width: 0;
+  height: 0;
+  border-top: 13px solid transparent;
+  border-right: 26px solid white;
+  border-bottom: 13px solid transparent;
 }
 
 .flex-wrapper {
@@ -64,4 +81,14 @@ h1 {
   font-family: sans-serif;
   font-size: 0.5em;
   text-anchor: middle;
+}
+
+header {
+  display: flex;
+}
+
+.robbie {
+  height: 150px;
+  margin-top: 10px;
+  width: 150px;
 }
