--- a/src/styles.css
+++ b/src/styles.css
@@ -6,10 +6,11 @@ body {
 h1 {
   color: #232527;
   background-color: white;
-  padding: 10px;
-  height: 50px;
-  position: relative;
   border-radius: 10px;
+  height: 50px;
+  margin: 50px 20px;
+  padding: 10px;
+  position: relative;
 }
 
 h1:before {
@@ -30,13 +31,14 @@ h1:before {
 }
 
 .single-chart {
+  display: grid;
+  justify-content: center;
   width: 33%;
-  justify-content: space-around ;
 }
 
 .circular-chart {
   display: block;
-  margin: 50px 30px;
+  margin: 50px 30px 20px;
   max-width: 80%;
   max-height: 250px;
 }
@@ -80,7 +82,16 @@ h1:before {
   fill: #fff;
   font-family: sans-serif;
   font-size: 0.5em;
+  font-weight: 200;
   text-anchor: middle;
+}
+
+.text {
+  color: #fff;
+  font-family: sans-serif;
+  font-size: 1.2em;
+  font-weight: 100;
+  padding: 0 140px;
 }
 
 header {
