--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,36 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: #232527;
+  display: flex;
+  flex-direction: column;
   font-family: "Open Sans";
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.user-avatar {
+  display: flex;
+}
+
+h2 {
+  color: white;
+  font-size: 60px;
+  font-weight: 200;
+  margin: 15px;
+  padding: 0;
 }
 
 h1 {
   color: #232527;
   background-color: white;
   border-radius: 10px;
-  height: 50px;
+  font-weight: 200;
   margin: 50px 20px;
   padding: 10px;
   position: relative;
@@ -23,6 +46,10 @@ h1:before {
   border-top: 13px solid transparent;
   border-right: 26px solid white;
   border-bottom: 13px solid transparent;
+}
+
+.fitlit-logo {
+  float: right;
 }
 
 .flex-wrapper {
@@ -94,12 +121,22 @@ h1:before {
   padding: 0 140px;
 }
 
-header {
-  display: flex;
-}
-
 .robbie {
   height: 150px;
   margin-top: 10px;
   width: 150px;
 }
+
+/* ------------------------------- */
+
+.toggle-user-info {
+  background-color: white;
+  width: 40%;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.user-info {
+  color: #232527;
+}
+
