--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@ body {
   background-color: #232527;
   display: flex;
   flex-direction: column;
-  font-family: "Open Sans";
+  font-family: 'Roboto', sans-serif;
 }
 
 header {
@@ -21,7 +21,7 @@ header {
 h2 {
   color: white;
   font-size: 60px;
-  font-weight: 200;
+  font-weight: 100;
   margin: 15px;
   padding: 0;
 }
@@ -30,7 +30,7 @@ h1 {
   color: #232527;
   background-color: white;
   border-radius: 10px;
-  font-weight: 200;
+  font-weight: 100;
   margin: 50px 20px;
   padding: 10px;
   position: relative;
