--- a/src/styles.css
+++ b/src/styles.css
@@ -129,7 +129,7 @@ h1:before {
 
 /* ------------------------------- */
 
-.toggle-user-info {
+.user-info-card {
   background-color: white;
   width: 40%;
   padding: 10px;
@@ -140,3 +140,6 @@ h1:before {
   color: #232527;
 }
 
+i.fas {
+  color: white;
+}
