--- a/src/styles.css
+++ b/src/styles.css
@@ -31,7 +31,7 @@ h1 {
   background-color: white;
   border-radius: 10px;
   font-weight: 100;
-  margin: 50px 20px;
+  margin: 60px 20px;
   padding: 10px;
   position: relative;
 }
@@ -40,7 +40,7 @@ h1:before {
   content: "";
   position: absolute;
   right: 100%;
-  top: 26px;
+  top: 18px;
   width: 0;
   height: 0;
   border-top: 13px solid transparent;
@@ -81,6 +81,20 @@ h1:before {
   stroke-width: 2.8;
   stroke-linecap: round;
   animation: progress 1s ease-out forwards;
+}
+
+.steps {
+  display:flex;
+  flex-direction: column;
+  margin: 10px;
+}
+
+.active {
+  margin: 10px;
+}
+
+.text-style {
+  color: #1CD491;
 }
 
 @keyframes progress {
@@ -124,20 +138,23 @@ h1:before {
 .robbie {
   border-radius: 75px;
   height: 150px;
-  margin-top: 10px;
+  margin: 10px;
   width: 150px;
 }
 
 /* ------------------------------- */
 
-.user-info-card {
+.user-card {
   background-color: white;
-  width: 40%;
-  padding: 10px;
   border-radius: 5px;
+  font-size: 20px;
+  height: 20%;
+  margin: 15px;
+  padding: 10px;
+  width: 35%;
 }
 
-.user-info {
+.card-text {
   color: #232527;
 }
 
