--- a/src/styles.css
+++ b/src/styles.css
@@ -86,15 +86,20 @@ h1:before {
 .steps {
   display:flex;
   flex-direction: column;
-  margin: 10px;
+  margin: 5px;
 }
 
 .active {
   margin: 10px;
+  padding: 15px;
 }
 
 .text-style {
   color: #1CD491;
+}
+
+.steps {
+
 }
 
 @keyframes progress {
@@ -103,19 +108,7 @@ h1:before {
   }
 }
 
-.circle {
-  margin: ;
-}
-
-.circular-chart.red .circle {
-  stroke: #1CD491;
-}
-
-.circular-chart.green .circle {
-  stroke: #1CD491;
-}
-
-.circular-chart.blue .circle {
+.circular-chart .circle {
   stroke: #1CD491;
 }
 
@@ -130,9 +123,9 @@ h1:before {
 .text {
   color: #fff;
   font-family: sans-serif;
-  font-size: 1.2em;
+  font-size: 1.1em;
   font-weight: 100;
-  padding: 0 140px;
+  padding: 0 15px;
 }
 
 .robbie {
@@ -149,7 +142,7 @@ h1:before {
   border-radius: 5px;
   font-size: 20px;
   height: 20%;
-  margin: 15px;
+  margin: 25px;
   padding: 10px;
   width: 35%;
 }
@@ -159,5 +152,13 @@ h1:before {
 }
 
 i.fas {
-  color: white;
+  color: #1CD491;
+}
+
+.fa-cog {
+  font-size: 2rem;
+}
+.fa-tint,
+.fa-moon {
+  font-size: 8rem;
 }
