--- a/src/styles.css
+++ b/src/styles.css
@@ -46,7 +46,35 @@ h1:before {
   border-top: 13px solid transparent;
   border-right: 26px solid white;
   border-bottom: 13px solid transparent;
+  animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
+
+@keyframes scale-in-center {
+  0% {
+    transform: scale(0);
+            transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+@keyframes scale-in-center {
+  0% {
+    transform: scale(0);
+            transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+
 
 .fitlit-logo {
   float: right;
@@ -133,6 +161,49 @@ h1:before {
   height: 150px;
   margin: 10px;
   width: 150px;
+  animation: slide-in-blurred-top 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+  animation: slide-in-blurred-top 0.5s cubic-bezier(0.230, 1.000, 0.320, 1.000) both;
+}
+
+@keyframes slide-in-blurred-top {
+  0% {
+    transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+            transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+    transform-origin: 50% 0%;
+            transform-origin: 50% 0%;
+    filter: blur(40px);
+            filter: blur(40px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0) scaleY(1) scaleX(1);
+            transform: translateY(0) scaleY(1) scaleX(1);
+    transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+    filter: blur(0);
+            filter: blur(0);
+    opacity: 1;
+  }
+}
+@keyframes slide-in-blurred-top {
+  0% {
+    transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+            transform: translateY(-1000px) scaleY(2.5) scaleX(0.2);
+    transform-origin: 50% 0%;
+            transform-origin: 50% 0%;
+    filter: blur(40px);
+            filter: blur(40px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0) scaleY(1) scaleX(1);
+            transform: translateY(0) scaleY(1) scaleX(1);
+    transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+    filter: blur(0);
+            filter: blur(0);
+    opacity: 1;
+  }
 }
 
 /* ------------------------------- */
